--- a/src/forecast_stylesheet.css
+++ b/src/forecast_stylesheet.css
@@ -1,52 +1,40 @@
-.horizontal{
-    width: 100%;
-    height:225px;
+
+.forecast_cards{
+    display: flex;
+    flex: auto;
+    flex-direction: row;
+    border-top: 4px solid white;
     background-color:#eef6fb;
-    border-top: 1px solid white;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+
 
 }
-.leftsegment{
-    height:235px;
-    width:25%;
+.each_card{
+    display: flex;
+    flex-direction: column;
+    /*flex: 1 1 auto;*/
+    flex: 0 0 25%;
+    border-right: 4px solid white;
     background-color: #eef6fb;
-    border-top: 1px solid white;
-    border-left:3px solid white;
-    border-right:2px solid white;
-    border-bottom-left-radius: 10px;
+    padding:4px;
     padding-top: 20px;
-    padding-bottom: 10px;
-    text-align: center;
-
-
-}
-
-.lastsegment{
-    height:235px;
+    height:200px;
+    /*height: 35%;*/
     width:25%;
-    background-color:#eef6fb;
-    border-top: 1px solid white;
-    border-left:2px solid white;
-    margin-right:0px;
-    border-bottom-right-radius: 10px;
-    border-right-style: none;
-    padding-top: 20px;
-    padding-bottom: 10px;
-    text-align: center;
+    align-items: center;
 }
 
-.secondsegment{
-    height:235px;
-    width:25%;
-    background-color:#eef6fb;
-    border-top: 1px solid white;
-    border-left:2px solid white;
-    border-right:2px solid white;
-    padding-top: 20px;
-    padding-bottom: 10px;
-    text-align: center;
+.each_card:nth-child(4){
+      border-right: None;
 }
+
+.each_card:nth-child(1){
+      border-left: None;
+}
+.each_card:hover{
+    background-color: aquamarine;
+}
+
+
 .names{
     font-family: 'Montserrat', sans-serif;
     text-align: center;
